// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PieLegend ENCOURA theme matches the snapshot 1`] = `
<div>
  <ul
    class="css-xzgors"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1k6di39-MuiListItem-root"
    >
      <div
        class="MuiListItemIcon-root css-1oeyhhx-MuiListItemIcon-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1fgytbe-MuiPaper-root"
          index="0"
          optionslength="1"
          style="--Paper-shadow: none; background-color: rgb(127, 196, 225);"
        />
      </div>
      <div
        class="MuiListItemText-root MuiListItemText-multiline css-bbvmk4-MuiListItemText-root-DlsPieChart-pieLegendLabel"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-vt4fc5-MuiTypography-root"
        >
          120
        </span>
        <p
          class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-59kymt-MuiTypography-root"
        >
          120 [240.0%]
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`PieLegend ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <ul
    class="css-xzgors"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-qfq8o8-MuiListItem-root"
    >
      <div
        class="MuiListItemIcon-root css-1oeyhhx-MuiListItemIcon-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-e77e31-MuiPaper-root"
          index="0"
          optionslength="1"
          style="--Paper-shadow: none; background-color: rgb(127, 196, 225);"
        />
      </div>
      <div
        class="MuiListItemText-root MuiListItemText-multiline css-ajq5mj-MuiListItemText-root-DlsPieChart-pieLegendLabel"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-vt4fc5-MuiTypography-root"
        >
          120
        </span>
        <p
          class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-13sp3wf-MuiTypography-root"
        >
          120 [240.0%]
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`PieLegend ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <ul
    class="css-xzgors"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-dn1plq-MuiListItem-root"
    >
      <div
        class="MuiListItemIcon-root css-1le52mv-MuiListItemIcon-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-zi12ws-MuiPaper-root"
          index="0"
          optionslength="1"
          style="--Paper-shadow: none; background-color: rgb(127, 196, 225);"
        />
      </div>
      <div
        class="MuiListItemText-root MuiListItemText-multiline css-1ieo4fn-MuiListItemText-root-DlsPieChart-pieLegendLabel"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-azabt7-MuiTypography-root"
        >
          120
        </span>
        <p
          class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-10rxtrm-MuiTypography-root"
        >
          120 [240.0%]
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`PieLegend ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <ul
    class="css-xzgors"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-dn1plq-MuiListItem-root"
    >
      <div
        class="MuiListItemIcon-root css-1e10ezj-MuiListItemIcon-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1y99lnj-MuiPaper-root"
          index="0"
          optionslength="1"
          style="--Paper-shadow: none; background-color: rgb(127, 196, 225);"
        />
      </div>
      <div
        class="MuiListItemText-root MuiListItemText-multiline css-ujp0i7-MuiListItemText-root-DlsPieChart-pieLegendLabel"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1hvcons-MuiTypography-root"
        >
          120
        </span>
        <p
          class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-1k6qqc4-MuiTypography-root"
        >
          120 [240.0%]
        </p>
      </div>
    </li>
  </ul>
</div>
`;
